sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int]
      ^AlgInsertionSort:20: error: not found: value j
  	while(j>0 && T(j-1)>v)
              ^AlgInsertionSort:22: error: not found: value j
  		T(j)=T(j-1)
                  ^AlgInsertionSort:23: error: not found: value j
  		j=j-1	
                ^AlgInsertionSort:25: error: not found: value j
  	T(j)=v
          ^